authentication and migrations

--- a/LocalChow.Api/appsettings.json
+++ b/LocalChow.Api/appsettings.json
@@ -7,5 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConnection": "Server=.\\;Database=LocalChow;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AuthenticationConfiguration": {
+    "SecreteKey": "superSecretKey@345",
+    "ValidIssuer": "",
+    "ValidAudience": ""
   }
 }
