updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,49 @@
 /LocalChow.Entities/obj/Debug/netcoreapp3.1/LocalChow.Domain.pdb
 /LocalChow.Api/bin/Debug/netcoreapp3.1/*
 /LocalChow.Api/obj/project.nuget.cache
+/.vs/LocalChow.Api/DesignTimeBuild/.dtbcache.v2
+/.vs/LocalChow.Api/v16/.suo
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Api.deps.json
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Api.dll
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Api.pdb
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Domain.dll
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Domain.pdb
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Persistence.dll
+/LocalChow.Api/bin/Debug/netcoreapp3.1/LocalChow.Persistence.pdb
+/LocalChow.Api/bin/Debug/netcoreapp3.1/Newtonsoft.Json.dll
+/LocalChow.Api/bin/Debug/netcoreapp3.1/appsettings.json
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.MvcApplicationPartsAssemblyInfo.cs
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.assets.cache
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.csproj.CoreCompileInputs.cache
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.csproj.FileListAbsolute.txt
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.csprojAssemblyReference.cache
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.dll
+/LocalChow.Api/obj/Debug/netcoreapp3.1/LocalChow.Api.pdb
+/LocalChow.Api/obj/LocalChow.Api.csproj.nuget.dgspec.json
+/LocalChow.Api/obj/LocalChow.Api.csproj.nuget.g.props
+/LocalChow.Api/obj/project.assets.json
+/LocalChow.Api/obj/project.nuget.cache
+/LocalChow.Entities/bin/Debug/netcoreapp3.1/LocalChow.Domain.deps.json
+/LocalChow.Entities/bin/Debug/netcoreapp3.1/LocalChow.Domain.dll
+/LocalChow.Entities/bin/Debug/netcoreapp3.1/LocalChow.Domain.pdb
+/LocalChow.Entities/bin/Debug/netcoreapp3.1/LocalChow.Persistence.dll
+/LocalChow.Entities/bin/Debug/netcoreapp3.1/LocalChow.Persistence.pdb
+/LocalChow.Entities/obj/Debug/netcoreapp3.1/LocalChow.Domain.assets.cache
+/LocalChow.Entities/obj/Debug/netcoreapp3.1/LocalChow.Domain.csproj.CoreCompileInputs.cache
+/LocalChow.Entities/obj/Debug/netcoreapp3.1/LocalChow.Domain.csprojAssemblyReference.cache
+/LocalChow.Entities/obj/Debug/netcoreapp3.1/LocalChow.Domain.dll
+/LocalChow.Entities/obj/Debug/netcoreapp3.1/LocalChow.Domain.pdb
+/LocalChow.Entities/obj/LocalChow.Domain.csproj.nuget.dgspec.json
+/LocalChow.Entities/obj/project.assets.json
+/LocalChow.Entities/obj/project.nuget.cache
+/LocalChow.Persistence/bin/Debug/netcoreapp3.1/LocalChow.Persistence.deps.json
+/LocalChow.Persistence/bin/Debug/netcoreapp3.1/LocalChow.Persistence.dll
+/LocalChow.Persistence/bin/Debug/netcoreapp3.1/LocalChow.Persistence.pdb
+/LocalChow.Persistence/obj/Debug/netcoreapp3.1/LocalChow.Persistence.assets.cache
+/LocalChow.Persistence/obj/Debug/netcoreapp3.1/LocalChow.Persistence.csproj.CoreCompileInputs.cache
+/LocalChow.Persistence/obj/Debug/netcoreapp3.1/LocalChow.Persistence.csprojAssemblyReference.cache
+/LocalChow.Persistence/obj/Debug/netcoreapp3.1/LocalChow.Persistence.dll
+/LocalChow.Persistence/obj/Debug/netcoreapp3.1/LocalChow.Persistence.pdb
+/LocalChow.Persistence/obj/LocalChow.Persistence.csproj.nuget.dgspec.json
+/LocalChow.Persistence/obj/project.assets.json
+/LocalChow.Persistence/obj/project.nuget.cache
